refactor: tidy the code in router
