# docs/swagger.json
@@ -1,14 +1,14 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "API to get data from blockchain",
+        "description": "API to interact with the pick finance backend",
         "title": "pick finance api",
         "contact": {},
-        "version": "1.0"
+        "version": "0.0.1"
     },
     "basePath": "/api/v1",
     "paths": {
-        "/api/v1/auth/keyword_hash": {
+        "/auth/keyword_hash": {
             "get": {
                 "description": "the keyword hash is sign by the account to make sure that the account is accessed",
                 "produces": [
@@ -26,18 +26,18 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "type": "integer"
-                            }
-                        }
+                        "description": "keyword hash"
+                    },
+                    "400": {
+                        "description": "invalid param"
+                    },
+                    "403": {
+                        "description": "not authorized"
                     }
                 }
             }
         },
-        "/api/v1/auth/{address}/add_publisher": {
+        "/auth/{address}/add_publisher": {
             "post": {
                 "description": "add new publisher who is ability to publish new notification(",
                 "produces": [
@@ -81,8 +81,9 @@
                 }
             }
         },
-        "/api/v1/chart/profit": {
+        "/chart/profit": {
             "get": {
+                "description": "gets the profit in a time range",
                 "produces": [
                     "application/json"
                 ],
@@ -103,8 +104,9 @@
                 }
             }
         },
-        "/api/v1/chart/ratio": {
+        "/chart/ratio": {
             "get": {
+                "description": "gets the ratio of each asset info",
                 "produces": [
                     "application/json"
                 ],
@@ -116,8 +118,9 @@
                 }
             }
         },
-        "/api/v1/chart/volume": {
+        "/chart/volume": {
             "get": {
+                "description": "gets the volume of each asset in usd",
                 "produces": [
                     "application/json"
                 ],
@@ -138,7 +141,7 @@
                 }
             }
         },
-        "/api/v1/notification": {
+        "/notification": {
             "get": {
                 "description": "obtains the specific notification by the tag",
                 "produces": [
@@ -169,18 +172,12 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/notification.Notification"
-                            }
-                        }
+                        "description": "array of notification"
                     }
                 }
             }
         },
-        "/api/v1/notification/{publisher}": {
+        "/notification/{publisher}": {
             "post": {
                 "description": "publish new notification with title, content, category",
                 "produces": [
@@ -219,7 +216,7 @@
                     {
                         "type": "string",
                         "description": "the category of the notification: { QuotaUpdate, Weekly, Activity}",
-                        "name": "category",
+                        "name": "tag",
                         "in": "formData",
                         "required": true
                     }
@@ -231,8 +228,9 @@
                 }
             }
         },
-        "/api/v1/price_info/{coin}": {
+        "/price_info/{coin}": {
             "get": {
+                "description": "gets the Coin Price info and trend",
                 "produces": [
                     "application/json"
                 ],
@@ -248,13 +246,14 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "the price trend of coin, {\"rate\": ..., \"trend\": ...}"
+                        "description": "the price trend of coin, {trend_info:{\"rate\": ..., \"trend\": ...}}"
                     }
                 }
             }
         },
-        "/api/v1/transaction/{address}": {
+        "/transaction/{address}": {
             "get": {
+                "description": "gets the history transaction of specific account",
                 "produces": [
                     "application/json"
                 ],
@@ -290,33 +289,14 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "the transaction of the page"
+                        "description": "a page of transaction and the total transaction amount-{\"transaction"
                     },
                     "400": {
-                        "description": "Invalid params"
+                        "description": "invalid params"
                     },
                     "500": {
-                        "description": "Server error"
+                        "description": "server error"
                     }
-                }
-            }
-        }
-    },
-    "definitions": {
-        "notification.Notification": {
-            "type": "object",
-            "properties": {
-                "category": {
-                    "type": "string"
-                },
-                "content": {
-                    "type": "string"
-                },
-                "timeStamp": {
-                    "type": "integer"
-                },
-                "title": {
-                    "type": "string"
                 }
             }
         }
