# router/apiv1.go
@@ -13,76 +13,40 @@ import (
 	"github.com/SteinsElite/pickGinS/util"
 )
 
-func validQueryPhase(phase string) bool {
-	if phase == vault.Week || phase == vault.Month || phase == vault.Year {
-		return true
-	}
-	return false
-}
-
-func validTxTag(tag string) bool {
-	if tag == "" ||
-		tag == "deposit" ||
-		tag == "profit" ||
-		tag == "withdraw" {
-		return true
-	}
-	return false
-}
-
-func validCoinSymbol(coin string) bool {
-	if coin == util.MDX ||
-		coin == util.BTC ||
-		coin == util.ETH ||
-		coin == util.USDT ||
-		coin == util.HT {
-		return true
-	}
-	return false
-}
-
-func validNotificationTag(tag string) bool {
-	if tag == "" ||
-		tag == notification.QuotaUpdate ||
-		tag == notification.Activity ||
-		tag == notification.Weekly {
-		return true
-	}
-	return false
-}
-
 // GetTransaction godoc
-// @Summary get the transaction info
-// @Produce  json
-// @Success 200 "the transaction of the page"
-// @Failure 400 "Invalid params"
-// @Failure 500 "Server error"
-// @Param address path string true "user account address"
-// @Param tag query string false "tag of the transaction-{deposit,withdraw,claimProfit}, if not specify, get all the category"
-// @Param page query int true "index of page"
-// @Param page_size query int true "size of each page"
-// @Router /api/v1/transaction/{address} [get]
+// @summary get the transaction info
+// @description gets the history transaction of specific account
+// @produce  json
+// @success 200 "a page of transaction and the total transaction amount-{"transaction":...,
+// "count": ...}"
+// @failure 400 "invalid params"
+// @failure 500 "server error"
+// @param address path string true "user account address"
+// @param tag query string false "tag of the transaction-{deposit,withdraw,claimProfit}, if not specify, get all the category"
+// @param page query int true "index of page"
+// @param page_size query int true "size of each page"
+// @router /transaction/{address} [get]
 func GetTransaction(c *gin.Context) {
 	userAddr := c.Param("address")
 	tag := c.Query("tag")
 	if !validTxTag(tag) {
 		c.JSON(400, gin.H{
-			"err": "Invalid params",
-			"msg": "tags should be one of {deposit, withdraw, claimProfit}",
+			"error":   "invalid params",
+			"message": "tags should be one of {deposit, withdraw, claimProfit}",
 		})
 		return
 	}
 	if c.Query("page") == "" || c.Query("page_size") == "" {
 		c.JSON(400, gin.H{
-			"err": "Missing params",
-			"msg": "specify the page & page_size",
+			"error":   "missing params",
+			"message": "specify the page & page_size",
 		})
 		return
 	}
 	page, _ := strconv.ParseInt(c.Query("page"), 10, 64)
 	pageSize, _ := strconv.ParseInt(c.Query("page_size"), 10, 64)
 
-	res, err := transaction.LoadTxFromDb(page, pageSize, tag, userAddr)
+	res, count, err := transaction.LoadTxFromDb(page, pageSize, tag, userAddr)
 	if err != nil {
 		c.JSON(500, gin.H{
 			"err": "internal error in server",
@@ -91,6 +55,7 @@ func GetTransaction(c *gin.Context) {
 	} else {
 		c.JSON(200, gin.H{
 			"transaction": res,
+			"count":       count,
 		})
 	}
 
@@ -98,35 +63,37 @@ func GetTransaction(c *gin.Context) {
 
 // GetVolume godoc
 // @Summary get the total volume info
+// @Description gets the volume of each asset in usd
 // @Produce  json
 // @Success 200 "the [(timestamp,volume)] in the time range"
 // @Param range query string true "the duration to query-{7D,1M,1Y}"
-// @Router /api/v1/chart/volume [get]
+// @Router /chart/volume [get]
 func GetVolume(c *gin.Context) {
 	phase := c.Query("range")
 	if !validQueryPhase(phase) {
 		c.JSON(400, gin.H{
-			"error":   "Invalid params",
+			"error":   "invalid params",
 			"message": "range should be one of {7D,1M,1Y}",
 		})
 	}
 	values := vault.PhasedVolume(phase)
 	c.JSON(200, gin.H{
-		"points": values,
+		"volume": values,
 	})
 }
 
 // GetProfit godoc
 // @Summary get the phased profit info
+// @Description gets the profit in a time range
 // @Produce  json
 // @Success 200 "the [(timestamp,profit)] in the time range"
 // @Param range query string true "the duration to query-{7D,1M,1Y}"
-// @Router /api/v1/chart/profit [get]
+// @Router /chart/profit [get]
 func GetProfit(c *gin.Context) {
 	phase := c.Query("range")
 	if !validQueryPhase(phase) {
 		c.JSON(400, gin.H{
-			"error":   "Invalid params",
+			"error":   "invalid params",
 			"message": "range should be one of {7D,1M,1Y}",
 		})
 	}
@@ -138,9 +105,10 @@ func GetProfit(c *gin.Context) {
 
 // GetRatio godoc
 // @Summary get the ratio info
+// @Description gets the ratio of each asset info
 // @Produce  json
 // @Success 200 "amount of each asset in usd"
-// @Router /api/v1/chart/ratio [get]
+// @Router /chart/ratio [get]
 func GetRatio(c *gin.Context) {
 	values := vault.AssetRatio()
 	c.JSON(200, gin.H{
@@ -150,10 +118,11 @@ func GetRatio(c *gin.Context) {
 
 // GetCoinPriceInfo godoc
 // @Summary get the Coin Price info and trend
+// @Description gets the Coin Price info and trend
 // @Produce json
 // @Param coin path string true "{BTC,ETH,USDT,HT,MDX}"
-// @Success 200 "the price trend of coin, {"rate": ..., "trend": ...}"
-// @Router /api/v1/price_info/{coin} [get]
+// @Success 200 "the price trend of coin, {trend_info:{"rate": ..., "trend": ...}}"
+// @Router /price_info/{coin} [get]
 func GetCoinPriceInfo(c *gin.Context) {
 	coinSymbol := c.Param("coin")
 	if !validCoinSymbol(coinSymbol) {
@@ -163,7 +132,10 @@ func GetCoinPriceInfo(c *gin.Context) {
 		})
 		return
 	}
-	c.JSON(200, coin.GetCoinTrend(coinSymbol))
+	trend := coin.GetCoinTrend(coinSymbol)
+	c.JSON(200, gin.H{
+		"trend_info": trend,
+	})
 }
 
 // GetNotification godoc
@@ -173,8 +145,8 @@ func GetCoinPriceInfo(c *gin.Context) {
 // @param tag query string false "tag of the notification-{QuotaUpdate,Activity,Weekly}, if not specify, get all the category"
 // @param page query int true "index of page"
 // @param page_size query int true "size of each page"
-// @success 200 {array} notification.Notification
-// @router /api/v1/notification [get]
+// @success 200 "array of notification"
+// @router /notification [get]
 func GetNotification(c *gin.Context) {
 	tag := c.Query("tag")
 	if !validNotificationTag(tag) {
@@ -195,8 +167,11 @@ func GetNotification(c *gin.Context) {
 	page, _ := strconv.ParseInt(c.Query("page"), 10, 64)
 	pageSize, _ := strconv.ParseInt(c.Query("page_size"), 10, 64)
 
-	res := notification.GetNotification(tag, page, pageSize)
-	c.JSON(200, res)
+	res, count := notification.GetNotification(tag, page, pageSize)
+	c.JSON(200, gin.H{
+		"notification": res,
+		"count":        count,
+	})
 }
 
 // GetKeyWordHash godoc
@@ -204,8 +179,10 @@ func GetNotification(c *gin.Context) {
 // @description the keyword hash is sign by the account to make sure that the account is accessed
 // @produce json
 // @param address query string true "the address of the keyword bind to"
-// @success 200 {array} byte
-// @router /api/v1/auth/keyword_hash [get]
+// @success 200 "keyword hash"
+// @failure 400 "invalid param"
+// @failure 403 "not authorized"
+// @router /auth/keyword_hash [get]
 func GetKeyWordHash(c *gin.Context) {
 	accountAddr := c.Query("address")
 	if !util.IsValidAddress(accountAddr) {
@@ -217,13 +194,15 @@ func GetKeyWordHash(c *gin.Context) {
 	}
 	word := getAuthWord(accountAddr)
 	if word == nil {
-		c.JSON(3001, gin.H{
+		c.JSON(403, gin.H{
 			"error":   "Fail to getAuthWord",
 			"message": "the address is not register as admin",
 		})
 		return
 	}
-	c.JSON(200, word)
+	c.JSON(200, gin.H{
+		"keyword_hash": word,
+	})
 }
 
 // AddPublisher godoc
@@ -236,7 +215,7 @@ func GetKeyWordHash(c *gin.Context) {
 // @param new_publisher formData string true "the address of new publisher to add"
 // @param keyword formData string true "the keyword been used to sign"
 // @success 200
-// @router /api/v1/auth/{address}/add_publisher [post]
+// @router /auth/{address}/add_publisher [post]
 func AddPublisher(c *gin.Context) {
 	adminAddr := c.Param("address")
 	sig := c.PostForm("signature")
@@ -244,7 +223,7 @@ func AddPublisher(c *gin.Context) {
 	keyword := c.PostForm("keyword")
 
 	if !IsAuth(adminAddr, sig) {
-		c.JSON(3001, gin.H{
+		c.JSON(403, gin.H{
 			"error":   "not permission",
 			"message": "current account is not the publisher",
 		})
@@ -261,25 +240,32 @@ func AddPublisher(c *gin.Context) {
 // @param signature formData string true "the signature of the publisher"
 // @param title formData string true "the title of the notification"
 // @param content formData string true "the content of the notification"
-// @param category formData string true "the category of the notification: { QuotaUpdate, Weekly, Activity}"
+// @param tag formData string true "the category of the notification: { QuotaUpdate, Weekly, Activity}"
 // @success 200
-// @router /api/v1/notification/{publisher} [post]
+// @router /notification/{publisher} [post]
 func PublishNotification(c *gin.Context) {
 	publisher := c.Param("publisher")
 	signature := c.PostForm("signature")
 	if !IsAuth(publisher, signature) {
-		c.JSON(3001, gin.H{
-			"error":   "not permission",
-			"message": "current account is not the publisher",
+		c.JSON(403, gin.H{
+			"error":   "invalid publisher",
+			"message": "current account is not the valid publisher",
+		})
+		return
+	}
+	tag := c.PostForm("tag")
+	if validNotificationTag(tag) {
+		c.JSON(400, gin.H{
+			"error":   "invalid tag",
+			"message": "tag should be one of {QuotaUpdate, Weekly, Activity}",
 		})
 		return
 	}
 	title := c.PostForm("title")
 	content := c.PostForm("content")
-	category := c.PostForm("category")
 	announcement := notification.Notification{
 		Title:     title,
-		Category:  category,
+		Category:  tag,
 		Content:   content,
 		TimeStamp: time.Now().Unix(),
 	}
